# 6.1-6.3_Sem_2

./: 6.1-6.3 Sem_2.sln  62sem2.files  62sem2.includes  CMakeLists.txt
.qtc_clangd/: compile_commands.json
6.2 Sem_2/: 6.2 Sem_2.vcxproj  6.2 Sem_2.vcxproj.filters  Asteroid.cpp  Asteroid.h  Bonus.cpp  Bonus.h  DynamicArrayObjects.cpp  DynamicArrayObjects.h  Missle.cpp  Missle.h  SpaceObject.cpp  SpaceObject.h  Spaceship.cpp  Spaceship.h  data.txt  main.cpp
